change color login forms

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     <!-- FOOTER -->
     <footer>
       <div id="contact_us_footer"><a href="contact.html">Contact Us</a></div>
-      <div id="copyright_footer">&copy; Group E - Lambton College</div>
+      <div id="copyright_footer">&copy; Santiago Devia - Lambton College</div>
     </footer>
   </body>
 </html>
