--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
   height: 450px;
 }
 .sign-up-form h1 {
-  color: #1c8adb;
+  color: #7dc95e;
   margin-bottom: 30px;
 }
 .input-box {
@@ -52,7 +52,7 @@ button
   background-color: #1c8adb;
 }
 .signup-btn {
-  background-color: #1c8adb;
+  background-color: #7dc95e;
 
 }
 .fa-facebook {
@@ -154,7 +154,7 @@ footer
 <!-- FOOTER -->
 <footer>
   <div id="contact_us_footer"><a href="contact.html">Contact Us</a></div>
- <div id="copyright_footer">&copy; Group E - Lambton College</div>
+ <div id="copyright_footer">&copy; Santiago Devia - Lambton College</div>
 </footer> 
 
 </html>
