--- a/signin.html
+++ b/signin.html
@@ -24,7 +24,7 @@
   height: 450px;
 }
 .sign-up-form h1 {
-  color: #1c8adb;
+  color: #7dc95e;
   margin-bottom: 30px;
 }
 .input-box {
@@ -48,14 +48,14 @@ button
   cursor: pointer;
 }
 .signin-btn{
-  background-color: #1c8adb;
+  background-color: #7dc95e;
 }
 .signup-btn {
-  background-color: #1c8adb;
+  background-color: #7dc95e;
 
 }
 .fa-facebook {
-  background-color: #1c8adb;
+  background-color: #7dc95e;
 }
 a {
   text-decoration: none;
@@ -134,7 +134,7 @@ footer
   </div>
 
   <!-- CODE FOR THE REST OF THE PAGES -->
-<div class="sign-up-form"</div>
+<div class="sign-up-form">
  <!-- <img src="LOGO-round.png">-->
     <h1>Sign In Now</h1>
     <form>
@@ -157,7 +157,7 @@ footer
 <!-- FOOTER -->
 <footer>
  <div id="contact_us_footer"><a href="contact.html">Contact Us</a></div>
- <div id="copyright_footer">&copy; Group E - Lambton College</div>
+ <div id="copyright_footer">&copy; Santiago Devia - Lambton College</div>
 </footer> 
 
 </html>
