--- a/ConsultOrders.html
+++ b/ConsultOrders.html
@@ -82,37 +82,37 @@
 
 		<H2>Shopping with Toronto's Farm</H2>
 		<p>Here is the list of the purchases you have done</p>
-
+			<br>
 		<center>
 
 		<table border="2">
 			<thead align='center'>
 			<tr>
-				<th>Order Nº</th>
-				<th>Date</th>
-				<th>Value</th>
-				<th>Status</th>
+				<th style="padding: 12px;">Order Nº</th>
+				<th style="padding: 12px;">Date</th>
+				<th style="padding: 12px;">Value</th>
+				<th style="padding: 12px;">Status</th>
 			</tr>
 			</thead>
 
 			<tbody align='center'>
 			<tr>
 				<td>123456</td>
-				<td>2022-03-31</td>
+				<td style="padding: 10px;">2022-03-31</td>
 				<td>CAD 30.00</td>
 				<td>Placed</td>
 			</tr>
 			<tr>
 				<td>123488</td>
-				<td>2022-03-14</td>
+				<td style="padding: 10px;">2022-03-14</td>
 				<td>CAD 48.00</td>
-				<td>Picked-up</td>
+				<td style="padding: 10px;">Picked-up</td>
 			</tr>			
 			<tr>
 				<td>123344</td>
-				<td>2022-02-20</td>
+				<td style="padding: 10px;">2022-02-20</td>
 				<td>CAD 12.50</td>
-				<td>Picked-up</td>
+				<td style="padding: 10px;">Picked-up</td>
 			</tr>		
 			</tbody>	
 		</table>
