--- a/Shop.html
+++ b/Shop.html
@@ -47,6 +47,13 @@
 		   left: 1%;
 		   width:100%;
 		}
+
+		.myButton
+		{
+			background-color: #648767;
+			border-radius: 4px; color: white; 
+			border:none;
+		}
 	
 	</style>
 	
@@ -85,67 +92,67 @@
 		    <form>
 		      <table>
 		        <thead>
-			      <tr>
+			      <tr style="text-align: center;">
 				    <th>Product</th>
-				    <th>Quantity</th>
+				    <th style="padding: 5px; padding-right: 30px;">Quantity</th>
 			      </tr>
 		        </thead>
-
-		        <tbody>
-			      <tr>
-				     <td><input type="checkbox" name="ch">Acorn Squash</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				<br>
+		        <tbody style="padding-top: 5px;">
+			      <tr style="border-top: 5px;">
+				     <td style="padding-top: 15px"><input type="checkbox" name="ch">Acorn Squash</input></td>
+				     <td style="padding-top: 15px; padding-left: 35px;"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Broccoli</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Cabbage</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Carrot</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Cauliflower</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Corn</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 				  <tr>
 				     <td><input type="checkbox" name="ch">Eggplant</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Garlic</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Lettuce</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Onion</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Potato</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>
 			      <tr>
 				     <td><input type="checkbox" name="ch">Pumpkin</input></td>
-				     <td><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
+				     <td style="padding-left: 35px"><input type="text" name="shopquantity" size="1" maxlength="2" value="0"></input></td>
 			      </tr>			
 		        </tbody>	
 		      </table>
 			  <br>
-			  <a href="ShopConfirmation.html"><input type="button" value="Confirm"></input></a>
-			  <input type="reset" value="Clear"></input>
-			  <a href="index.html"><input type="button" value="Cancel"></input></a>
+			  <a href="ShopConfirmation.html"><input type="button" class="myButton" value="Confirm"></input></a>
+			  <input type="reset" class="myButton" value="Clear"></input>
+			  <a href="index.html"><input type="button" class="myButton" value="Cancel"></input></a>
 		    </form>
 	      </center>
 	    </div>
